login,revisar master extranet

--- a/01_Presentacion/Views/Home/Login.cshtml
+++ b/01_Presentacion/Views/Home/Login.cshtml
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="grid_4">
-                <form id="bookingForm">
+                <form id="bookingForm" method="post">
                     <h2>Iniciar Sesión</h2>
                     <div class="tmInput">
                         Usuario
@@ -21,7 +21,7 @@
                     </div>
                     <div class="tmInput">
                         Contraseña
-                        <input name="Contraseña" type="password">
+                        <input name="Contrasena" type="password">
                     </div>
                     <div class="clear"></div>
                     <div class="ta__right">
