--- a/01_Presentacion/Views/Home/Menu.cshtml
+++ b/01_Presentacion/Views/Home/Menu.cshtml
@@ -19,7 +19,9 @@
                             <div class="maxheight">
                                 <a href="~/Bootstrap/Extranet/images/@item.ImgProducto" class="gall_item"><img src="~/Bootstrap/Extranet/images/@item.ImgProducto" alt=""></a>
                                 <div class="gall_bot">
-                                    <div class="text1">@item.NombreProducto</div>
+                                    <div class="text1">
+                                        <strong class="color1">@item.NombreProducto</strong>
+                                    </div>
                                     @item.DescripcionProducto
                                     <br />
                                     @item.SubTipoProducto.DescripcionSubTipo
