--- a/01_Presentacion/Views/Home/Index.cshtml
+++ b/01_Presentacion/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
             <div class="grid_4">
                 <h2>Recomendaciones</h2>
                 <blockquote class="bq1">
-                    <img src="~/Bootstrap/Extranet/images/chibolo.jpg" height="128" width="128" alt="" class="img_inner fleft noresize">
+                    <img src="~/Bootstrap/Extranet/images/chibolo.jpg" height="128" width="128" alt="" style="border-radius : 50%" class="img_inner fleft noresize">
                     <div class="extra_wrapper">
                         <div class="bq_title color1">Chibolo</div>
                         Sivamus at magna non nuncer tristique rhoncus. Aliquame nibh ante, egestas id dictumertolom  commodo. Praesent faucib mal.
