--- a/01_Presentacion/Views/MasterPages/MasterExtranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterExtranet.cshtml
@@ -72,7 +72,9 @@
                                     }
                                     else
                                     {
-                                        <div class="pull-right">@Html.ActionLink("Iniciar Sesión", "Login")  |  @Html.ActionLink("Registrarse", "Registro")</div>
+                                        <div class="pull-right">
+                                            @Html.ActionLink("Iniciar Sesión", "Login")  |  @Html.ActionLink("Registrarse", "Registro")&nbsp;&nbsp;&nbsp;&nbsp;<img src="~/Bootstrap/Extranet/images/chibolo.jpg" height="40" width="40" alt="" style="border-radius : 50%">
+                                        </div>
                                     }
                                 }
                             </div>
