--- a/01_Presentacion/Views/Home/Index.cshtml
+++ b/01_Presentacion/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
                         <div class="bann_capt  bn__1">
                             <div class="maxheight">
                                 <img src="~/Bootstrap/Extranet/images/icon2.png" alt="">
-                                <div class="bann_title">Kid’s &amp; Vegan Menu</div>
+                                <div class="bann_title">Menú para niños</div>
                                 <a href="#">más</a>
                             </div>
                         </div>
@@ -43,7 +43,7 @@
                         <div class="bann_capt  bn__2">
                             <div class="maxheight">
                                 <img src="~/Bootstrap/Extranet/images/icon3.png" alt="">
-                                <div class="bann_title">Happy Hours <br> &amp; Offers</div>
+                                <div class="bann_title">Variedad de bebidas</div>
                                 <a href="#">más</a>
                             </div>
                         </div>
@@ -56,13 +56,12 @@
                     <div class="row">
                         <div class="grid_5 preffix_1">
                             <h2>Bienvenido</h2>
-                            <p>Post about this <strong class="color1"><a href="http://blog.templatemonster.com/free-website-templates/" rel="nofollow">freebie</a></strong> will tell all you need to know about it. Need a good choice of <strong class="color1"><a href="http://www.templatemonster.com/properties/topic/food-restaurant/" rel="nofollow">themes</a></strong>? Visit TemplateMonster’s website.</p>
-                            Aliquam nibh e,estas id dictum a, commodo. Praesent faucibus malesuada faucibusonec laeet metus id laoreet malesuadarem ipsum dolor sit <br>
+                            Los visitantes son acogidos por nuestro personal formado profesionalmente en calidad de atención al cliente, en un local cálido, con varios ambientes de estilo único, que permiten gran versatilidad, y facilitan la atención simultánea de reservas privadas, corporativas, de empresas, embajadas o instituciones <br>
                             <a href="#" class="btn">más</a>
                         </div>
                         <div class="grid_5">
-                            <h2>Feel the Savor of Life</h2>
-                            Dervamus at magna non nunc tristique rhoncus. Aliquam nibh ante, egestas id dictum a, commodo. Praesent faucibus malesuada ucibus. Donec laeet metus id laoreet malesuadarem ipsum dosit ametctetur adipiscing elit. Nullam consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcorper fermentum. <br>
+                            <h2>Siente el Sabor de la Vida</h2>
+                            Queremos conquistar el mercado internacional, restaurando al mundo entero con la calidad de nuestra gastronomía, nuestro excelente servicio y ambiente único: un verdadero placer para los sentidos. <br>
                             <a href="#" class="btn">más</a>
                         </div>
                     </div>
@@ -79,10 +78,10 @@
             <div class="grid_4">
                 <h2>Recomendaciones</h2>
                 <blockquote class="bq1">
-                    <img src="~/Bootstrap/Extranet/images/chibolo.jpg" height="128" width="128" alt="" style="border-radius : 50%" class="img_inner fleft noresize">
+                    <img src="~/Bootstrap/Extranet/images/chibolo.jpg" height="128" width="128" alt="" @*style="border-radius : 50%"*@ class="img_inner fleft noresize">
                     <div class="extra_wrapper">
                         <div class="bq_title color1">Chibolo</div>
-                        Sivamus at magna non nuncer tristique rhoncus. Aliquame nibh ante, egestas id dictumertolom  commodo. Praesent faucib mal.
+                        La atención y la comida estuvieron bien, estaba medio vacío, eso hizo todo más agradable. Comí un Pulpo brasa y estuvo bastante rico, a pesar de verse pequeño termine bastante satisfecho.
                         <a href="#"><span class="fa fa-chevron-right"></span>más recomendaciones</a>
                     </div>
                 </blockquote>
@@ -90,15 +89,15 @@
             <div class="grid_4">
                 <h2>Noticias</h2>
                 <div class="block2">
-                    <time datetime="2014-01-01">11<br>June</time>
+                    <time datetime="2014-01-01">2016<br>JUN</time>
                     <div class="extra_wrapper">
-                        <div class="text1"><a href="#">Vivamus at magna non nunc </a></div>Rehoncus. Aliquam nibh antegestas id dictum a, commodo. Praesenterto faucibus malesuada faucibus
+                        <div class="text1"><a href="#">Premio </a></div>Premio "World Leader Business Enterprise" otorgado por la World Confederation of Businesses.
                     </div>
                 </div>
                 <div class="block2">
-                    <time datetime="2014-01-01">15<br>APR</time>
+                    <time datetime="2014-01-01">2017<br>ENE</time>
                     <div class="extra_wrapper">
-                        <div class="text1"><a href="#">Tivamus at magna non nunc </a></div>Rehoncus. Aliquam nibh antegestas id dictum a, commodo. Praesenterto faucibus malesuada faucibu
+                        <div class="text1"><a href="#">Reconocimiento </a></div>Reconocimiento a la Calidad Empresarial otorgado por Latin America Quality Institute, recibiendo el título de "Premio Quality Peru"
                     </div>
                 </div>
             </div>
