--- a/01_Presentacion/Views/MasterPages/MasterExtranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterExtranet.cshtml
@@ -106,8 +106,8 @@
                         <a href="#" class="fa fa-facebook"></a>
                     </div>
                     <div class="copyright">
-                        <span class="brand">La Valentina </span> &copy; <span id="copyright-year"></span>
-                        <div>Sitio Web diseñado por MASY</div>
+                        <span class="brand">la valentina </span> &copy; <span id="copyright-year"></span>
+                        @*<div>Sitio Web diseñado por MASY</div>*@
                     </div>
                 </div>
             </div>
