--- a/01_Presentacion/Views/MasterPages/MasterExtranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterExtranet.cshtml
@@ -8,6 +8,9 @@
     <link rel="icon" href="~/Bootstrap/Extranet/images/favicon.ico">
     <link rel="shortcut icon" href="~/Bootstrap/Extranet/images/favicon.ico" />
 
+    <!-- Font Awesome -->
+    <link href="~/Bootstrap/Intranet/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="~/Bootstrap/Extranet/css/stuck.css">
     <link rel="stylesheet" href="~/Bootstrap/Extranet/css/style.css">
     <link rel="stylesheet" href="~/Bootstrap/Extranet/css/touchTouch.css">
