--- a/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using _03_Dominio
+
+<!DOCTYPE html>
 <html lang="es-pe">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -80,7 +82,20 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="">
                             <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                <img src="images/img.jpg" alt="">John Doe
+                                @{
+                                    if (Session["usuario"] != null)
+                                    {
+                                        entUsuario u = (entUsuario)Session["usuario"];
+                                        if (u.Rol == "Administrador")
+                                        {
+                                            <img src="~/Bootstrap/Extranet/images/@u.ImgUsuario" alt="">@u.NombreUsuario
+                                        }
+                                        else
+                                        {
+                                            Response.Redirect("~/Home/Index");
+                                        }
+                                    }
+                                }
                                 <span class=""></span>
                             </a>
                             <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -90,7 +105,7 @@
                                         <span>Configuración</span>
                                     </a>
                                 </li>
-                                <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Cerrar Sesión</a></li>
+                                <li>@Html.ActionLink("Cerrar Sesión", "Logout", "Extranet")</li>
                             </ul>
                         </li>
                     </ul>
