--- a/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
@@ -105,7 +105,7 @@
                                         <span>Configuración</span>
                                     </a>
                                 </li>
-                                <li>@Html.ActionLink("Cerrar Sesión", "Logout", "Extranet")</li>
+                                <li>@Html.ActionLink("Cerrar Sesión", "Logout")</li>
                             </ul>
                         </li>
                     </ul>
