CREO QUE TENEMOS DEMASIADAS TABLAS

--- a/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
@@ -149,5 +149,6 @@
     <script src="~/Bootstrap/Intranet/build/js/custom.min.js"></script>
     @RenderSection("scripts", required: false)
     @RenderSection("scripts2", required: false)
+    @RenderSection("scripts3",required: false)
 </body>
 </html>
