--- a/01_Presentacion/Views/Producto/NuevoPlato.cshtml
+++ b/01_Presentacion/Views/Producto/NuevoPlato.cshtml
@@ -7,10 +7,11 @@
 
 <h2>Nuevo Plato</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("NuevoPlato", "Producto", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
-    
+    @Html.ValidationSummary(true)
+
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -56,8 +57,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ImgProducto, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ImgProducto, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ImgProducto, "", new { @class = "text-danger" })
+                <input type="file" name="archivo" />
             </div>
         </div>
 
