--- a/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
@@ -36,7 +36,7 @@
                                 <li>
                                     <a><i class="fa fa-users"></i> Cliente <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li>@Html.ActionLink("Manetenedor Clientes", "Nuevo", "Cliente")</li>
+                                        <li>@Html.ActionLink("Manetenedor Clientes", "Lista", "Cliente")</li>
                                     </ul>
                                 </li>
                                 <li>
