--- a/01_Presentacion/Views/Cliente/Nuevo.cshtml
+++ b/01_Presentacion/Views/Cliente/Nuevo.cshtml
@@ -5,15 +5,13 @@
     Layout = "~/Views/MasterPages/MasterIntranet.cshtml";
 }
 
-<h2>Nuevo</h2>
+<h2>Nuevo Cliente</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Cliente</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
@@ -83,5 +81,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar a la lista", "Lista")
 </div>
