--- a/01_Presentacion/Views/Cliente/Lista.cshtml
+++ b/01_Presentacion/Views/Cliente/Lista.cshtml
@@ -9,7 +9,7 @@
 <div class="form-group">
     <div class="row">
         <div class="col-md-3">
-            <input type="text" id="Nombre" class="form-control" placeholder="Nombre">
+            <input type="text" id="Nombre" class="form-control" placeholder="Buscar cliente">
         </div>
     </div>
 </div>
