--- a/01_Presentacion/Views/Cliente/DetalleLista.cshtml
+++ b/01_Presentacion/Views/Cliente/DetalleLista.cshtml
@@ -53,7 +53,7 @@
             @Html.DisplayFor(modelItem => item.Persona.FechaNacimiento)
         </td>
         <td>
-            @Html.ActionLink("Editar", "Editar", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Editar", "Editar", new { id=item.ClienteID }) |
             @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Eliminar", "Eliminar", new { /* id=item.PrimaryKey */ })
         </td>
