--- a/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
@@ -49,7 +49,7 @@
                                 <li>
                                     <a><i class="fa fa-home"></i> Pedido <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="index.html">Dashboard</a></li>
+                                        <li>@Html.ActionLink("Registrar Pedido", "Main", "Pedido")</li>
                                         <li><a href="index2.html">Dashboard2</a></li>
                                         <li><a href="index3.html">Dashboard3</a></li>
                                     </ul>
@@ -102,7 +102,7 @@
                                         <span>Configuración</span>
                                     </a>
                                 </li>
-                                <li>@Html.ActionLink("Cerrar Sesión", "Logout")</li>
+                                <li>@Html.ActionLink("Cerrar Sesión", "Logout", "Intranet")</li>
                             </ul>
                         </li>
                     </ul>
