--- a/01_Presentacion/Views/Pedido/AgregarCliente.cshtml
+++ b/01_Presentacion/Views/Pedido/AgregarCliente.cshtml
@@ -18,7 +18,26 @@
     </div>
 </div>
 
+<div id="detalle">
+
+</div>
+
 <p>
     @Html.ActionLink("Cancelar", "Main")
 </p>
+
+@section scripts{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            muestra();
+        });
+
+        $('#buscaCliente').change(function () {
+           muestra();
+        });
+
+        var muestra = function () {
+            $('#detalle').load('@Url.Action("DetalleListaCliente")', { Nombre: $('#buscaCliente').val() })
+        }
+    </script>
 }
