--- a/01_Presentacion/Views/Pedido/AgregarMenu.cshtml
+++ b/01_Presentacion/Views/Pedido/AgregarMenu.cshtml
@@ -17,16 +17,35 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Entrada.ProductoID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.Entrada.ProductoID, (SelectList)ViewBag.lista, "<Seleccionar>", htmlAttributes: new { @class = "form-control" })
+            @*@Html.LabelFor(model => model.Entrada.ProductoID, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <label class="control-label col-md-2">Entrada</label>
+            <div class="col-md-3">
+                @Html.DropDownListFor(model => model.Entrada.ProductoID, (SelectList)ViewBag.lista1, "<Seleccionar Entrada>", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Entrada.ProductoID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
+            @*@Html.LabelFor(model => model.Segundo.ProductoID, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <label class="control-label col-md-2">Segundo</label>
+            <div class="col-md-3">
+                @Html.DropDownListFor(model => model.Segundo.ProductoID, (SelectList)ViewBag.lista2, "<Seleccionar Segundo>", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Segundo.ProductoID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @*@Html.LabelFor(model => model.Postre.ProductoID, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <label class="control-label col-md-2">Postre</label>
+            <div class="col-md-3">
+                @Html.DropDownListFor(model => model.Postre.ProductoID, (SelectList)ViewBag.lista3, "<Seleccionar Postre>", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Postre.ProductoID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Cantidad, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-3">
                 @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" })
             </div>
@@ -41,5 +60,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Cancelar", "Main")
 </div>
