--- a/01_Presentacion/Views/Cliente/DetalleLista.cshtml
+++ b/01_Presentacion/Views/Cliente/DetalleLista.cshtml
@@ -54,8 +54,7 @@
         </td>
         <td>
             @Html.ActionLink("Editar", "Editar", new { id=item.ClienteID }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Eliminar", "Eliminar", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Eliminar", "Eliminar", new { id = item.ClienteID })
         </td>
     </tr>
 }
