--- a/01_Presentacion/Views/Pedido/AgregarCliente.cshtml
+++ b/01_Presentacion/Views/Pedido/AgregarCliente.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "BuscarCliente";
+    ViewBag.Title = "Buscar Cliente";
     Layout = "~/Views/MasterPages/MasterIntranet.cshtml";
 }
 
@@ -23,7 +23,7 @@
 </div>
 
 <p>
-    @Html.ActionLink("Cancelar", "Main")
+    @Html.ActionLink("Cancelar", "NuevoPedido")
 </p>
 
 @section scripts{
