--- a/01_Presentacion/Views/Pedido/Main.cshtml
+++ b/01_Presentacion/Views/Pedido/Main.cshtml
@@ -1,36 +1,42 @@
-﻿@using _03_Dominio
-
+﻿
 @{
     ViewBag.Title = "Main";
     Layout = "~/Views/MasterPages/MasterIntranet.cshtml";
 }
 
-<h2>Main</h2>
+<h2>Pedido por llamadas</h2>
 
-
-
-@{
-    if (Session["pedido"] != null)
-    {
-        entPedido p = (entPedido)Session["pedido"];
-        <div class="row">
-            <div class="form-group">
-                <label class="control-label col-md-1">Cliente: </label>
-                <div class="col-md-3">
-                    <input type="text" class="form-control" disabled="disabled" placeholder="@p.Cliente.Persona.Nombre @p.Cliente.Persona.Apellidos">
-                </div>
-            </div>
+<div class="form-group">
+    <div class="row">
+        <div class="col-lg-3">
+            <select class="form-control" id="estado">
+                <option value="">-- Todos --</option>
+                <option value="Registrado">Registrado</option>
+                <option value="Reparto">En Reparto</option>
+                <option value="Finalizado">Finalizado</option>
+            </select>
         </div>
-        <div>
-            <p>
-                @Html.ActionLink("Agregar Menú", "AgregarMenu")
-            </p>
-        </div>
-    }
-    else
-    {
-        <p>
-            @Html.ActionLink("Agregar Cliente", "AgregarCliente")
-        </p>
-    }
+    </div>
+</div>
+
+<div id="detalle">
+
+</div>
+
+
+@section scripts{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            muestra();
+        });
+
+        $('#estado').change(function () {
+           muestra();
+        });
+
+        var muestra = function () {
+            $('#detalle').load('@Url.Action("DetalleMain")', { estado: $('#estado').val() })
+        }
+    </script>
 }
+
